--- a/Terms.html
+++ b/Terms.html
@@ -54,11 +54,11 @@
     ".replace(/gascript/g, 'script'));
     }
     </script><meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-sticky u-sticky-590b u-white u-header" id="header"><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
+  <body data-path-to-root="./" data-include-products="true" class="u-body u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-sticky u-sticky-590b u-white u-header" id="header"><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
         <a href="./" data-page-id="6431794" class="u-image u-logo u-image-1" data-image-width="132" data-image-height="98" title="Home">
           <img src="images/rkkoranteng-website-logo.png?rand=1678" class="u-logo-image u-logo-image-1">
         </a>
-        <nav class="u-menu u-menu-one-level u-offcanvas u-menu-1">
+        <nav class="u-align-right u-menu u-menu-one-level u-offcanvas u-menu-1">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;">
             <a class="u-button-style u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-top-bottom-menu-spacing u-hamburger-link u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#">
               <svg class="u-svg-link" viewBox="0 0 24 24"><use xlink:href="#menu-hamburger"></use></svg>
@@ -103,8 +103,8 @@ box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4) !important
     <section class="u-clearfix u-white u-section-2" id="block-1">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <h2 class="u-text u-text-1"> Terms and Conditions</h2>
-        <p class="u-text u-text-2">LAST UPDATED: April 3, 2025</p>
-        <p class="u-text u-text-3"> Welcome to Richard Koranteng LLC. By using our training and consulting services, you agree to the following terms and conditions. Please read them carefully before making any payments or engaging with our services. </p>
+        <p class="u-text u-text-2">LAST UPDATED: April 25, 2025</p>
+        <p class="u-text u-text-3"> Welcome to RKKORANTENG LLC. By using our training and consulting services, you agree to the following terms and conditions. Please read them carefully before making any payments or engaging with our services. </p>
       </div>
     </section>
     <section class="u-clearfix u-white u-section-3" id="sec-e79e">
@@ -187,7 +187,7 @@ box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4) !important
         <p class="u-align-center u-text u-text-1">
           <a href="Solutions.html" data-page-id="440806750" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-1" title="Consulting">Solutions</a>| <a href="About.html" data-page-id="668010430" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-2" title="Home">About</a>&nbsp;| <a href="Contact.html" data-page-id="107224232" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-3" title="Contact">Contact</a>| <a href="Privacy.html" data-page-id="81624041" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-4" title="Privacy">Privacy </a>| <a href="Terms.html" data-page-id="197338384" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-5" title="Terms">Terms</a>
         </p>
-        <p class="u-small-text u-text u-text-variant u-text-2"> © 2025&nbsp;<a href="https://rkkoranteng.com/" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-6">Richard Koranteng LLC.</a>&nbsp;All Rights Reserved
+        <p class="u-small-text u-text u-text-variant u-text-2"> © 2025&nbsp;<a href="https://rkkoranteng.com/" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-6">RKKoranteng LLC.</a>&nbsp;All Rights Reserved
         </p>
       </div></footer><span style="height: 64px; width: 64px; margin-left: 0px; margin-right: auto; margin-top: 0px; background-image: none; right: 20px; bottom: 20px; padding: 20px;" class="u-back-to-top u-icon u-icon-rounded u-opacity u-opacity-85 u-palette-1-base" data-href="#"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 551.13 551.13"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-1d98"></use></svg><svg class="u-svg-content" enable-background="new 0 0 551.13 551.13" viewBox="0 0 551.13 551.13" xmlns="http://www.w3.org/2000/svg" id="svg-1d98"><path d="m275.565 189.451 223.897 223.897h51.668l-275.565-275.565-275.565 275.565h51.668z"></path></svg></span>
   
